@@ -16845,18 +16845,17 @@ code.
 @section Controlling visibility
 @cindex Visibility
 
-Header @file{R_ext/Visibility.h} has some definitions for controlling the
-visibility of entry points.  These are only effective when
+Header @file{R_ext/Visibility.h} has some definitions for controlling
+the visibility of entry points.  These are only effective when
 @samp{HAVE_VISIBILITY_ATTRIBUTE} is defined -- this is checked when @R{}
 is configured and recorded in header @file{Rconfig.h} (included by
 @file{R_ext/Visibility.h}).  It is often defined on modern Unix-alikes
-with a recent compiler@footnote{It is defined by the Intel compilers,
-but also hides unsatisfied references and so cannot be used with @R{}.
-It was not supported by the @abbr{AIX} nor Solaris compilers.}, but not
-supported on macOS nor Windows.  Minimizing the visibility of symbols in
-a shared library will both speed up its loading (unlikely to be
-significant) and reduce the possibility of linking to other entry points
-of the same name.
+with a recent compiler@footnote{Not pre-2023 Intel nor @abbr{AIX} nor
+Solaris compilers.} but not supported on Windows.
+@c Support for macOS was added for R 4.5.0.
+Minimizing the visibility of symbols in a shared library will both speed
+up its loading (unlikely to be significant) and reduce the possibility
+of linking to other entry points of the same name.
 
 C/C++ entry points prefixed by @code{attribute_hidden} will not be
 visible in the shared object.  There is no comparable mechanism for
@@ -16865,14 +16864,14 @@ for example package @pkg{stats}.  Most compilers which allow control of
 visibility will allow control of visibility for all symbols @emph{via} a
 flag, and where known the flag is encapsulated in the macros
 @samp{C_VISIBILITY}, @samp{CXX_VISIBILITY}@footnote{This applies to the
-compiler for the default C++ dialect (currently C++11) and not
-necessarily to other dialects.} and @samp{F_VISIBILITY} for C, C++ and
-Fortran compilers.@footnote{In some cases Fortran compilers accept the
-flag but do not actually hide their symbols: at the time of writing that
-was true of @command{gfortran}, @command{flang-new} and Intel's
-@command{ifx}.}  These are defined in @file{etc/Makeconf} and so
-available for normal compilation of package code.  For example,
-@file{src/Makevars} could include some of
+compiler for the default C++ dialect and not necessarily to other
+dialects.} and @samp{F_VISIBILITY} for C, C++ and Fortran
+compilers.@footnote{In many cases Fortran compilers accept the flag but
+do not actually hide their symbols: at the time of writing that was true
+of @command{gfortran}, @command{flang-new} and Intel's @command{ifx}.}
+These are defined in @file{etc/Makeconf} and so available for normal
+compilation of package code.  For example, @file{src/Makevars} could
+include some of
 
 @example
 PKG_CFLAGS=$(C_VISIBILITY)
